# smartclaw

./: .gitignore  .goreleaser.yml  HERMES_PLAN.md  Makefile  PLAN.md  README.md  REWRITE_PLAN.md  ROADMAP.md  go.mod  go.sum  package-lock.json  package.json
desktop/: app.go  doc.go  main.go  notify.go  tray.go
desktop/frontend/: index.html
docs/: README.es.md  README.ja.md  README.ko.md
e2e/: chat.spec.ts  connection.spec.ts  fixtures.ts  memory.spec.ts  package-lock.json  package.json  playwright.config.ts  sidebar.spec.ts  skills.spec.ts  wiki.spec.ts
extensions/vscode/: package.json  tsconfig.json
extensions/zed/: Cargo.toml  README.md  extension.toml
extensions/zed/src/: lib.rs
internal/acp/: eventbus.go  eventbus_test.go  permissions.go  permissions_test.go  registry.go  registry_test.go  server.go
internal/adapters/: adapters.go  adapters_test.go
internal/agents/: profiles.go  profiles_test.go
internal/alertengine/: alertengine_test.go  config.go  correlation.go  engine.go  fingerprint.go  metrics.go  models.go  poller.go  poller_test.go  tools.go  trigger.go  trigger_test.go
internal/analytics/: analytics.go  analytics_test.go
internal/api/: anthropic_sdk.go  azure.go  cache_aware.go  client.go  client_test.go  google.go  openai.go  openai_compatible.go  openai_sdk.go  provider.go  streaming.go  streaming_test.go  tools.go  types.go
internal/archaeology/: blame.go  layer.go  layer_test.go  log.go
internal/assistant/: assistant.go  assistant_test.go
scripts/: build-dmg.sh  build-exe.sh  install.ps1  install.sh  package-desktop.sh
(+694 files in other folders)
