[package]
name = "smartclaw-zed"
version = "0.1.0"
edition = "2021"
description = "SmartClaw Zed extension — AI coding agent via ACP"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.zed]
